2009-01-11 Add add_click and pop_click methods in 
           BlockingContourLabeler. -JJL

2010-01-03 Added rcParams['axes.color_cycle'] - EF

2010-01-03 Added Pierre's qt4 formlayout editor and toolbar button - JDH

2009-12-31 Add support for using math text as marker symbols (Thanks to tcb)
           - MGD

2009-12-31 Commit a workaround for a regression in PyQt4-4.6.{0,1} - DSD

2009-12-22 Fix cmap data for gist_earth_r, etc. -JJL

2009-12-20 spines: put spines in data coordinates, add set_bounds()
           call. -ADS

2009-12-18 Don't limit notch size in boxplot to q1-q3 range, as this
           is effectively making the data look better than it is. - ADS

2009-12-18 mlab.prctile handles even-length data, such that the median
           is the mean of the two middle values. - ADS

2009-12-15 Add raw-image (unsampled) support for the ps backend. - JJL

2009-12-14 Add patch_artist kwarg to boxplot, but keep old default.
           Convert boxplot_demo2.py to use the new patch_artist. - ADS

2009-12-06 axes_grid: reimplemented AxisArtist with FloatingAxes support.
           Added new examples. - JJL

2009-12-01 Applied Laurent Dufrechou's patch to improve blitting with
           the qt4 backend - DSD

2009-11-13 The pdf backend now allows changing the contents of
           a pdf file's information dictionary via PdfPages.infodict. - JKS

2009-11-12 font_manager.py should no longer cause EINTR on Python 2.6
           (but will on the 2.5 version of subprocess). Also the
           fc-list command in that file was fixed so now it should
           actually find the list of fontconfig fonts. - JKS

2009-11-10 Single images, and all images in renderers with
           option_image_nocomposite (i.e. agg, macosx and the svg
           backend when rcParams['svg.image_noscale'] is True), are
           now drawn respecting the zorder relative to other
           artists. (Note that there may now be inconsistencies across